--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "chart.js": "^4.4.6",
     "framer-motion": "^11.11.11",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
