--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0"
+    "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.27.0",
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
